--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@firebase/app": "^0.10.1",
     "@firebase/auth": "^1.7.1",
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -21,6 +22,8 @@
     "http-status-codes": "^2.3.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
+    "razorpay": "^2.9.4",
+    "ts-node": "^10.9.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
