--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "build": "npx tsc"
+    "build": "npx tsc src/*"
   },
   "keywords": [],
   "author": "",
